2026 04 01 test updates (#1669)
Simple git merge from develop, excluding any branch specific changes such as to the build files.

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Zack Olson <zack@rmanet.com>
Co-authored-by: Charles Graham <charles.r.graham@usace.army.mil>
Co-authored-by: Wes Reagan <reaganwesley12@gmail.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Vairav Laxman <vayiravan@gmail.com>
Co-authored-by: Ryan Ripken <89810919+rma-rripken@users.noreply.github.com>
Co-authored-by: Bryson Spilman <87150647+rma-bryson@users.noreply.github.com>
Co-authored-by: Jorge Hassan <jhassan@solidlogix.com>
Co-authored-by: rma-kayla <kayla@rmanet.com>
Co-authored-by: Bryson Spilman <bryson@rmanet.com>
Co-authored-by: Ryan Miles <ryanm@rmanet.com>
Co-authored-by: Adam Korynta <47677856+adamkorynta@users.noreply.github.com>
Co-authored-by: Daniel Osborne <Daniel.T.Osborne@usace.army.mil>
Co-authored-by: Eric Novotny <eric.v.novotny@usace.army.mil>
Co-authored-by: Eric Novotny <nov00002@umn.edu>
Co-authored-by: Vairav Laxman <vairavan.laxman@solidlogix.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>